# ga-component

./: .gitignore  Cargo.toml  Makefile  README.md  edgee-component.toml
.github/workflows/: check.yml  wasm-build-release.yml
src/: ga_payload.rs  lib.rs  string_ext.rs
wit/: protocols.wit
