[package]
name = "ga-component"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_qs = "0.13.0"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
wit-bindgen = "0.34.0"
