[package]
name = "ga-component"
version = "1.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_qs = "0.15.0"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
wit-bindgen = "0.42.1"

[dev-dependencies]
cargo-llvm-cov = "0.6.17"
pretty_assertions = "1.4.1"
